Bug 115504 - Content trees in the Sidebar Navigator deck are unreachable using the keyboard
Summary: Content trees in the Sidebar Navigator deck are unreachable using the keyboard
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-07 02:16 UTC by Jim Raykowski
Modified: 2018-02-14 22:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-02-07 02:16:30 UTC
Here are the steps to reproduce:

1) Open the Sidebar Navigator deck
2) Click on Heading in the content tree 
3) Press the ESC key
focus rectangle should be around Navigator deck title
4) Use the Tab key to move through the deck contents

result: Content tree never gets the keyboard focus

Expected result: Content tree gets the keyboard focus
Comment 1 Telesto 2018-02-07 15:41:41 UTC
Repro
Version: 6.1.0.0.alpha0+
Build ID: 8a0b61172a14b8b766a2e85f27762db3558d3af7
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-02-06_03:28:54
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Jim Raykowski 2018-02-08 02:33:04 UTC
Telesto, 
Thanks for doing the repro.

Here's the patch: 
https://gerrit.libreoffice.org/#/c/49400/
Comment 3 Commit Notification 2018-02-09 11:09:10 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6f511f1dec1fe4a5bc6d6e2dc116eb9886c24bda

tdf#115504 Add tabstop to Sidebar Navigator deck content trees

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.