tdf#115504 Add tabstop to Sidebar Navigator deck content trees

Change-Id: Ie006e01ea6179b94cca77354437678ff90e1bbd6
Reviewed-on: https://gerrit.libreoffice.org/49400
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>